--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
+server.port=8090
 
+spring.data.mongodb.uri=mongodb+srv://yayar:ntou414@cluster0.1w6ba.mongodb.net/WBSEfinal?retryWrites=true&w=majority
