--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8090
+spring.rabbitmq.host=140.121.150.68
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
 
 spring.data.mongodb.uri=mongodb+srv://yayar:ntou414@cluster0.1w6ba.mongodb.net/WBSEfinal?retryWrites=true&w=majority
