second push(修正登入功能)
修正註冊功能
修正登入功能
修正最新文章搜尋功能
(除熱門文章)所有API測試成功

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8090
 
 spring.data.mongodb.uri=mongodb+srv://yayar:ntou414@cluster0.1w6ba.mongodb.net/WBSEfinal?retryWrites=true&w=majority
+Djavax.net.ssl.trustStore=D:\mongoDBFiles\mongodbStore -Djavax.net.ssl.trustStorePassword=password -Djavax.security.auth.useSubjectCredsOnly=false
