--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.port=8090
-
 spring.data.mongodb.uri=mongodb+srv://yayar:ntou414@cluster0.1w6ba.mongodb.net/WBSEfinal?retryWrites=true&w=majority
-Djavax.net.ssl.trustStore=D:\mongoDBFiles\mongodbStore -Djavax.net.ssl.trustStorePassword=password -Djavax.security.auth.useSubjectCredsOnly=false
+management.endpoint.shutdown.enabled=false
+management.endpoints.jmx.exposure.exclude=*
+management.trace.http.enabled=true
+management.server.port=7878
+management.server.address=127.0.0.1
+management.endpoints.web.exposure.include=*,httptrace
+management.trace.http.include=REQUEST_HEADERS,RESPONSE_HEADERS
