--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-web</artifactId>	
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		</dependency>
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
